# Kerberos-Nota-SegComp

./: .gitignore  Doxyfile  DoxygenLayout.xml  Esboço relatorio.txt  README.md  pyproject.toml  run.py
data/: README.md  notas.json  usuarios.json
docs/: README_TESTES_E_DEMO.md  auditoria_tecnica_completa_para_chatgpt.txt  divisao_tarefas.md  fluxo_kerberos.md  fontes_algoritmos.md  relatorio_tecnico.md  relatorio_tecnico_base.md  roteiro_apresentacao_portal_notas.md  roteiro_video_apresentacao.md  wireshark_chat_seguro.md
docs/html/: ____init_____8py.html  ____init_____8py_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  as__server_8py.html  as__server_8py.js  as__server_8py_source.html  authenticator_8py.html  authenticator_8py.js  authenticator_8py_source.html  classes.html  classkerberos__notas_1_1rede_1_1cliente__tcp_1_1_cliente_kerberos_t_c_p-members.html  classkerberos__notas_1_1rede_1_1cliente__tcp_1_1_cliente_kerberos_t_c_p.html  classkerberos__notas_1_1rede_1_1cliente__tcp_1_1_cliente_kerberos_t_c_p.js  classkerberos__notas_1_1rede_1_1servidor_1_1_manipulador_kerberos-members.html  classkerberos__notas_1_1rede_1_1servidor_1_1_manipulador_kerberos.html  client_2____init_____8py.html  (+191 more)
doxygen_pages/: execucao.md  mainpage.md
doxygen_theme/: custom.css
scripts/: criar_usuario.py  demo_chat_seguro.py  gerar_chaves.py  iniciar_servidores.py  reset_dados.py
templates/: erro.html  layout.html  login.html  notas.html
tests/: test_as_server.py  test_chat_seguro.py  test_crypto.py  test_fluxo.py  test_notas.py  test_rede.py  test_tgs.py
(+126 files in other folders)
