[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kerberos-notas"
version = "0.1.0"
description = "Implementação acadêmica simplificada do protocolo Kerberos para proteção de um sistema de notas"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "cryptography"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
